# wt32-eth01-FreeRTOS

./: .gitignore  LIBRARIES_OVERVIEW.md  MCP23S17_INTEGRATION.md  MQTT_comms_subsys.md  PROGRAMMING_REFERENCE.md  PR_Readme.md  Pickup_algo_and_MQTTBridge_SRS.md  README.md  README_MQTT_TEST.md  RESET_LOOP_DIAGNOSTICS.md  TEST_PLAN_WITH_WIRING.md  TEST_READY.md  TEST_RESULTS_PHASE1.md  VERIFICATION_REPORT.md  WT32_ETH01_PINOUT.md  build_instructions.md  pinout.csv  pinout_temporary_direct_gpio.csv  platformio.ini  requirements.txt
docs/srs/_build/: .gitignore
driver_datasheets_and_calculations/: INDEX.md
examples/BasicDriverTest/: BasicDriverTest.ino  README.md
examples/Move100Steps/: Move100Steps.ino  README.md
idf/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
idf/.cache/clangd/index/: AP.cpp.5A881A16B66B6354.idx  AppInsights.cpp.8A9A8969A03F5FA7.idx  Arduino.h.E701FDF7DFF0F40C.idx  ArduinoOTA.cpp.F296628F4C52692F.idx  ArduinoOTA.h.26F184F48A2ACDEC.idx  AsyncUDP.cpp.1EA61CF5CC3B2D8E.idx  AsyncUDP.h.D757465DD379EA9B.idx  BLE2901.cpp.084DF3D5649EFCC0.idx  BLE2902.cpp.B27FC5D7320F0341.idx  BLE2904.cpp.EF087BDE40D4A681.idx  BLEAddress.cpp.086F5A36C3FAC758.idx  BLEAdvertisedDevice.cpp.877819BA969A3E50.idx  BLEAdvertising.cpp.52139FBF0A8E8FB8.idx  BLEBeacon.cpp.B5967E8D4EE8987D.idx  BLECharacteristic.cpp.11DDFF46924DF3F8.idx  BLECharacteristicMap.cpp.095FD6603ECAD518.idx  BLEClient.cpp.C9B5762198A55FAB.idx  BLEDescriptor.cpp.7303262747033427.idx  BLEDescriptorMap.cpp.3EC19768FE36FAE8.idx  BLEDevice.cpp.DCFC19DE9076817D.idx  BLEEddystoneTLM.cpp.12B5F1D3EAA75F60.idx  BLEEddystoneURL.cpp.5236A92F03695E9E.idx  BLEExceptions.cpp.475E1FEDAD905F06.idx  BLEHIDDevice.cpp.04E494B192FEF3D4.idx  BLERemoteCharacteristic.cpp.DF48F30403156B0D.idx  BLERemoteCharacteristic.h.8BE94779969770BD.idx  BLERemoteDescriptor.cpp.F7133C10ABC57667.idx  BLERemoteService.cpp.7BD80D1B0847256C.idx  BLEScan.cpp.6C9F8D158639BEE8.idx  BLESecurity.cpp.78CB49078B5CD27E.idx  BLESecurity.h.AA2527F91C3FA1E4.idx  BLEServer.cpp.6F78F15840FA5085.idx  BLEService.cpp.62B53B61EDA26D22.idx  BLEServiceMap.cpp.0D20281348359222.idx  BLEUUID.cpp.3667A67AAC5B49A5.idx  BLEUtils.cpp.D17631D5ACAE9712.idx  BLEValue.cpp.1F3944A627845AFF.idx  BTAddress.cpp.CAC5C862FDBC9123.idx  BTAdvertisedDeviceSet.cpp.5FAC3F9D13243B83.idx  BTScanResultsSet.cpp.5EA80D516436A572.idx  (+1044 more)
idf/components/Gantry/: CMakeLists.txt
idf/components/MCP23S17/: CMakeLists.txt
idf/components/SDF08NK8X/: CMakeLists.txt
idf/components/gpio_expander/: CMakeLists.txt
idf/main/: CMakeLists.txt  app_main.cpp  idf_component.yml
include/: axis_drivetrain_params.h  axis_pulse_motor_params.h  config.h  gantry_app_constants.h  gpio_expander.h
lib/Gantry/: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  library.json
lib/Gantry/docs/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_FLOW.md  CONFIGURATION_GUIDE.md  DEVELOPMENT_JOURNAL.md  DEVELOPMENT_STATUS.md  EXAMPLES.md  INDEX.md
lib/Gantry/src/: BUGS_AND_GAPS_ANALYSIS.md  CONVEYOR_PICK_PLACE_REVIEW.md  COORDINATE_AND_LIMITS_ANALYSIS.md  ENHANCEMENT_PLAN.md  GANTRY_DRIVER_INTEGRATION_REVIEW.md  GANTRY_INTEGRATION_EXAMPLE.cpp  GANTRY_REPRESENTATION_GUIDE.md  Gantry.cpp  Gantry.h  GantryAxisStepper.cpp  GantryAxisStepper.h  GantryConfig.cpp  GantryConfig.h  GantryEndEffector.cpp  GantryEndEffector.h  GantryKinematics.cpp  GantryKinematics.h  GantryLimitSwitch.cpp  GantryLimitSwitch.h  GantryLinearAxis.h  GantryPulseMotorLinearAxis.cpp  GantryPulseMotorLinearAxis.h  GantryPulseMotorRotaryAxis.cpp  GantryPulseMotorRotaryAxis.h  GantryRotaryAxis.h  GantryRotaryServo.cpp  GantryRotaryServo.h  GantryTrajectory.cpp  GantryTrajectory.h  GantryUtils.h  LIBRARY_DEVELOPMENT_PLAN.md  LIBRARY_PLAN_SUMMARY.md
lib/MCP23S17/: CMakeLists.txt  README.md
lib/MCP23S17/src/: MCP23S17.cpp  MCP23S17.h
lib/PulseMotor/: CMakeLists.txt  README.md  library.json
lib/PulseMotor/src/: PulseMotor.cpp  PulseMotor.h
lib/SDF08NK8X/: COMMIT_MSG.txt  FIXES_APPLIED.md  ReadMe.md
lib/SDF08NK8X/include/: SDF08NK8X.h
lib/SDF08NK8X/src/: SDF08NK8X.cpp  SDF08NK8X.h
src/: basic_tests.cpp  basic_tests.h  gantry_test_console.cpp  gantry_test_console.h  gpio_expander.c  main.cpp  main.cpp.backup
test/: README
tools/: capture_boot.py  listen_serial.py  poll_max_limit.py  probe_console.py  reset_and_listen.py  run_calibrate_probe.py  run_home_probe.py
tools/srs_build/: README.md  build.ps1  package-lock.json  package.json  render-diagrams.mjs
wt32_motion_baseline/: CMakeLists.txt  README.md  main.c  motion_config.h  subordinate_layer.c  subordinate_layer.cpp  supervisory_layer.c  supervisory_layer.cpp
